chore(cards): update card examples

--- a/playground/ImageCard.html
+++ b/playground/ImageCard.html
@@ -22,7 +22,7 @@
           </div>
         </sgds-icon-list>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <p slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</p>
       <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
