--- a/playground/ThumbnailCard.html
+++ b/playground/ThumbnailCard.html
@@ -5,8 +5,8 @@
 
 <div class="sgds-container">
   <div class="sgds-grid">
-    <sgds-thumbnail-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted>
-      <img slot="thumbnail" alt="img alternate text goes here" width="48" height="48" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg">
+    <sgds-thumbnail-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" stretchedLink tinted>
+      <img slot="thumbnail" alt="img alternate text goes here" width="48" height="48" src="https://automation.vuejs.org/images/goread_io.png">
       <sgds-badge variant="primary" slot="upper">New</sgds-badge>
       <span slot="subtitle">EXPLORE THE FEATURES</span>
       <span slot="title">Innovative Solutions for You</span>
@@ -20,7 +20,7 @@
           </div>
         </sgds-icon-list>
       </div>
-      <span slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</span>
+      <p slot="description">Discover how our platform can streamline your workflow and enhance productivity. With cutting-edge technology and user-friendly design, we empower you to achieve more.</p>
       <div slot="lower" style="display: flex; flex-wrap: wrap; gap: 8px;">
         <sgds-badge variant="neutral" outlined>Design</sgds-badge>
         <sgds-badge variant="neutral" outlined>Research</sgds-badge>
