--- a/playground/Mainnav.html
+++ b/playground/Mainnav.html
@@ -31,9 +31,9 @@
     </sgds-mainnav-dropdown>
     <sgds-mainnav-dropdown slot="end">
         <span slot="toggler">Dropdown</span>
-        <sgds-dropdown-item>Item 1</sgds-dropdown-item>
-        <sgds-dropdown-item>Item 2</sgds-dropdown-item>
-        <sgds-dropdown-item>Item 3</sgds-dropdown-item>
+        <sgds-dropdown-item><a href="#">Item 3</a></sgds-dropdown-item>
+        <sgds-dropdown-item><a href="#">Item 3</a></sgds-dropdown-item>
+        <sgds-dropdown-item><a href="#">Item 3</a></sgds-dropdown-item>
     </sgds-mainnav-dropdown>
     <sgds-button slot="end">Login</sgds-button>
     <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
