chore(thumbnail card): set thumbnail image to 100% width

--- a/playground/ThumbnailCard.html
+++ b/playground/ThumbnailCard.html
@@ -6,7 +6,7 @@
 <div class="sgds-container">
   <div class="sgds-grid">
     <sgds-thumbnail-card class="sgds-col-4 sgds-col-sm-4 sgds-col-md-4 sgds-col-lg-4" tinted>
-      <img slot="thumbnail" alt="img alternate text goes here" width="48" height="48" src="https://automation.vuejs.org/images/goread_io.png">
+      <img slot="thumbnail" alt="img alternate text goes here" width="48" height="48" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg">
       <sgds-badge variant="primary" slot="upper">New</sgds-badge>
       <span slot="subtitle">EXPLORE THE FEATURES</span>
       <span slot="title">Innovative Solutions for You</span>
