--- a/playground/Input.html
+++ b/playground/Input.html
@@ -22,3 +22,28 @@
 <sgds-input value="This is a normal input" valid>
     <sgds-icon name="trash" slot="trailing-icon"></sgds-icon>
 </sgds-input>
+
+
+<form>
+    <sgds-input id="no-validation-test" noSgdsValidate hasFeedback="both"  @sgds-input="handleInput"></sgds-input>
+    <sgds-button type="submit">Submit</sgds-button>
+</form>
+
+<script>
+        const handleInput = (e) => {
+        console.log(e);
+        if(e.target.value === 'test') {
+            e.target.setInvalid(false);
+        } else {
+            e.target.setInvalid(true);
+            e.target.invalidFeedback = "This is an invalid message";
+
+        }
+    }
+    const handleChange = (e) => {
+        console.log('change event', e);
+    }
+    document.querySelector("#no-validation-test").addEventListener('sgds-input', handleInput);
+    document.querySelector("#no-validation-test").addEventListener('sgds-change', handleChange);
+
+</script>
