chore(*): replace bootstrap icon to sgds icon

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </sgds-mainnav-item>
   <sgds-mainnav-item disabled><a href="#">About</a></sgds-mainnav-item>
   <sgds-mainnav-item slot="end" class="test test2"><a href="#" >Info</a></sgds-mainnav-item>
-  <sgds-mainnav-item slot="end" id="night-theme"><a href="#"><i class="bi bi-moon"></i></a></sgds-mainnav-item>
+  <sgds-mainnav-item slot="end" id="night-theme"><a href="#"><sgds-icon name="lightbulb"></sgds-icon></a></sgds-mainnav-item>
   <sgds-mainnav-dropdown>
     <span slot="toggler">Dropdown</span>
     <sgds-dropdown-item disabled><a href="https://www.google.com/">Item 1</a></sgds-dropdown-item>
