chore(*): update index.html example

--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
           <a href="#">Home</a>
         </sgds-breadcrumb-item>
         <sgds-breadcrumb-item>
-          About
+          <a href="#">About</a>
         </sgds-breadcrumb-item>
         <sgds-breadcrumb-item><a href="https://www.google.com">Contact</a></sgds-breadcrumb-item>
         <sgds-breadcrumb-item><a href="#">Info</a></sgds-breadcrumb-item>
