--- a/playground/Select.html
+++ b/playground/Select.html
@@ -15,7 +15,7 @@
 
 <div>
   <!-- Modal Example -->
-  <sgds-modal open>
+  <sgds-modal>
     <sgds-select
       id="select-example-in-modal"
       label="Select label"
@@ -24,12 +24,27 @@
     ></sgds-select>
   </sgds-modal>
 
+  <h2> Select populated by menuList prop</h2>
   <sgds-select
     id="select-example"
     label="Select label"
     hinttext="Select an option"
     placeholder="Select an option"
+    value="1"
   ></sgds-select>
+
+  <h2> Select populated by slots</h2>
+  <sgds-select
+    label="Select label"
+    hinttext="Select an option"
+    placeholder="Select an option"
+    value="1"
+  >
+  <sgds-select-option disabled value="1">Option 1</sgds-select-option>
+  <sgds-select-option disabled value="2">Option 2</sgds-select-option>
+  <sgds-select-option value="3">Option 3</sgds-select-option>
+</sgds-select>
+
 </div>
 
 <script>
