--- a/playground/Select.html
+++ b/playground/Select.html
@@ -44,6 +44,22 @@
   <sgds-select-option disabled value="2">Option 2</sgds-select-option>
   <sgds-select-option value="3">Option 3</sgds-select-option>
 </sgds-select>
+  <sgds-select
+    label="Using slots with some disabled options"
+    hinttext="Select an option"
+    placeholder="Select an option"
+    value="1"
+  >
+  <sgds-select-option  value="1">Option 1</sgds-select-option>
+  <sgds-select-option  value="2">Option 2</sgds-select-option>
+  <sgds-select-option value="3">Option 3</sgds-select-option>
+</sgds-select>
+ <sgds-select
+    label="Empty menu (slot)"
+    hinttext="Select an option"
+    placeholder="Select an option"
+    value="1"
+  ></sgds-select>
 
 </div>
 
