fix(Select): console error when menu item has no options
 should allow focus to shift to the next element

--- a/playground/Select.html
+++ b/playground/Select.html
@@ -54,11 +54,21 @@
   <sgds-select-option  value="2">Option 2</sgds-select-option>
   <sgds-select-option value="3">Option 3</sgds-select-option>
 </sgds-select>
+  <sgds-select
+    label="Readonly select"
+    hinttext="Select an option"
+    placeholder="Select an option"
+    value="1"
+    readonly
+  >
+  <sgds-select-option  value="1">Option 1</sgds-select-option>
+  <sgds-select-option  value="2">Option 2</sgds-select-option>
+  <sgds-select-option value="3">Option 3</sgds-select-option>
+</sgds-select>
  <sgds-select
     label="Empty menu (slot)"
     hinttext="Select an option"
     placeholder="Select an option"
-    value="1"
   ></sgds-select>
 
 </div>
