test(select): fix select tests

--- a/playground/Select.html
+++ b/playground/Select.html
@@ -39,8 +39,7 @@
     hinttext="Select an option"
     placeholder="Select an option"
     value="1"
-  >
-  <sgds-select-option disabled value="1">Option 1</sgds-select-option>
+  ><sgds-select-option disabled value="1">Option 1</sgds-select-option>
   <sgds-select-option disabled value="2">Option 2</sgds-select-option>
   <sgds-select-option value="3">Option 3</sgds-select-option>
 </sgds-select>
