--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -114,7 +114,7 @@
           id="combobox-single-selection-slot"
           value="1"
         >
-          <sgds-combo-box-option value="1">lion</sgds-combo-box-option>
+          <sgds-combo-box-option value="1" disabled>lion</sgds-combo-box-option>
           <sgds-combo-box-option value="2">tiger</sgds-combo-box-option>
           <sgds-combo-box-option value="3">bear</sgds-combo-box-option>
         </sgds-combo-box>
@@ -128,7 +128,7 @@
           id="combobox-multi-selection-slot"
           multiSelect
         >
-          <sgds-combo-box-option value="1">lion</sgds-combo-box-option>
+          <sgds-combo-box-option value="1" disabled>lion</sgds-combo-box-option>
           <sgds-combo-box-option value="2">tiger</sgds-combo-box-option>
           <sgds-combo-box-option value="3">bear</sgds-combo-box-option>
           </sgds-combo-box>
@@ -144,14 +144,14 @@
       </div>
     </div>
 
-  <script>
+  <!-- <script>
       const durianOption = document.createElement("sgds-combo-box-option");
       durianOption.textContent = "Durian";
       durianOption.setAttribute("value", "5");
       const slotSingle = document.getElementById("combobox-single-selection-slot");
       slotSingle.replaceChildren(durianOption);
 
-</script>
+</script> -->
   
     <!-- <script>
       document.addEventListener("sgds-change", reduceList);
