style(*): update outline with offset -2px

--- a/playground/Select.html
+++ b/playground/Select.html
@@ -21,6 +21,16 @@
       label="Select label"
       hinttext="Select an option"
       placeholder="Select an option"
+      hasFeedback
+      required
+    ></sgds-select>
+    <sgds-select
+      id="select-example-in-modal"
+      label="Select label"
+      hinttext="Select an option"
+      placeholder="Select an option"
+      hasFeedback
+      required
     ></sgds-select>
   </sgds-modal>
 
