style(datepicker): pass readonly to input

--- a/playground/Form.html
+++ b/playground/Form.html
@@ -85,12 +85,12 @@
 <sgds-input readonly label="readonly" hinttext="readonlye" value="This is a readonly input"></sgds-input>
 <sgds-textarea readonly label="readonly" hinttext="readonlye" value="This is a readonly textarea"></sgds-textarea>
 <sgds-datepicker readonly label="readonly" hinttext="readonlye"></sgds-datepicker>
-<sgds-quantity-toggle
+<!-- <sgds-quantity-toggle
   readonly
   label="readonly"
   hinttext="readonlye"
   value="This is a readonly quantity-toggle"
-></sgds-quantity-toggle>
+></sgds-quantity-toggle> -->
 <sgds-select
   readonly
   label="readonly"
