feat(quantity-toggle): add missign readonly

--- a/playground/Form.html
+++ b/playground/Form.html
@@ -10,7 +10,6 @@
 <sgds-quantity-toggle
   label="default"
   hinttext="default"
-  value="This is a disablde quantity-toggle"
 ></sgds-quantity-toggle>
 <sgds-select
   label="default"
@@ -44,7 +43,6 @@
   disabled
   label="disabled"
   hinttext="disbaled"
-  value="This is a disablde quantity-toggle"
 ></sgds-quantity-toggle>
 <sgds-select
   disabled
@@ -85,12 +83,12 @@
 <sgds-input readonly label="readonly" hinttext="readonlye" value="This is a readonly input"></sgds-input>
 <sgds-textarea readonly label="readonly" hinttext="readonlye" value="This is a readonly textarea"></sgds-textarea>
 <sgds-datepicker readonly label="readonly" hinttext="readonlye"></sgds-datepicker>
-<!-- <sgds-quantity-toggle
+<sgds-quantity-toggle
   readonly
   label="readonly"
   hinttext="readonlye"
-  value="This is a readonly quantity-toggle"
-></sgds-quantity-toggle> -->
+  value="2"
+></sgds-quantity-toggle>
 <sgds-select
   readonly
   label="readonly"
@@ -110,7 +108,10 @@
 <sgds-input required hasFeedback="both" label="invalid" hinttext="invalide"></sgds-input>
 <sgds-textarea required hasFeedback label="invalid" hinttext="invalide"></sgds-textarea>
 <sgds-datepicker required hasFeedback label="invalid" hinttext="invalide"></sgds-datepicker>
-<sgds-quantity-toggle min="1" hasFeedback label="invalid" hinttext="invalide"></sgds-quantity-toggle>
+<sgds-quantity-toggle
+  label="default"
+  hinttext="default"
+></sgds-quantity-toggle>
 <sgds-select
   required
   hasFeedback
