--- a/playground/Table.html
+++ b/playground/Table.html
@@ -36,6 +36,62 @@
 
   <body>
     <div class="container">
+      <sgds-table
+      responsive="md"
+      rowHeader="[&quot;Name&quot;, &quot;Age&quot;]"
+      tableData="[
+        [&quot;Alice&quot;, 25],
+        [&quot;Bob&quot;, 30]
+      ]"
+    >
+      <sgds-table-row>
+        <sgds-table-head>#</sgds-table-head>
+        <sgds-table-head>First name</sgds-table-head>
+        <sgds-table-head>Last name</sgds-table-head>
+        <sgds-table-head>Username</sgds-table-head>
+        <sgds-table-head>Action</sgds-table-head>
+      </sgds-table-row>
+
+      <sgds-table-row>
+        <sgds-table-cell>1</sgds-table-cell>
+        <sgds-table-cell>John</sgds-table-cell>
+        <sgds-table-cell>Doe</sgds-table-cell>
+        <sgds-table-cell>
+          <sgds-link>
+            <a href="#">@johndoe</a>
+          </sgds-link>
+        </sgds-table-cell>
+        <sgds-table-cell> </sgds-table-cell>
+      </sgds-table-row>
+
+      <sgds-table-row>
+        <sgds-table-cell>2</sgds-table-cell>
+        <sgds-table-cell>Jane</sgds-table-cell>
+        <sgds-table-cell>Doe</sgds-table-cell>
+        <sgds-table-cell>
+          <sgds-link>
+            <a href="#">@janedoe</a>
+          </sgds-link>
+        </sgds-table-cell>
+        <sgds-table-cell>
+          <sgds-icon-button name="three-dots-vertical"></sgds-icon-button>
+        </sgds-table-cell>
+      </sgds-table-row>
+
+      <sgds-table-row>
+        <sgds-table-cell>3</sgds-table-cell>
+        <sgds-table-cell>Bob</sgds-table-cell>
+        <sgds-table-cell>Smith</sgds-table-cell>
+        <sgds-table-cell>
+          <sgds-link>
+            <a href="#">@bobsmith</a>
+          </sgds-link>
+        </sgds-table-cell>
+        <sgds-table-cell>
+          <sgds-badge outlined> active </sgds-badge>
+        </sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
       <h3>Table - Structured elements with horizontal header</h3>
       <sgds-table>
         <sgds-table-row>
