chore(*): add slotchange event programatically on firstUpdated

--- a/playground/Select.html
+++ b/playground/Select.html
@@ -42,6 +42,7 @@
     placeholder="Select an option"
     required
     hasFeedback
+    value="1"
   ></sgds-select>
 
   <h2> Select populated by slots</h2>
