feat(*): new ssr slot change patch decorator

--- a/playground/Select.html
+++ b/playground/Select.html
@@ -1,4 +1,4 @@
-<script type="module" src="../src/index.ts"></script>
+<script type="module" src="../src/components/Select/index.ts"></script>
 <link href="../src/themes/day.css" rel="stylesheet" type="text/css" />
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
@@ -16,7 +16,7 @@
 <div>
   <!-- Modal Example -->
 
-  <h2> Select populated by menuList prop</h2>
+  <!-- <h2> Select populated by menuList prop</h2>
   <sgds-select
     id="select-example"
     label="Select label"
@@ -25,7 +25,7 @@
     required
     hasFeedback
     value="1"
-  ></sgds-select>
+  ></sgds-select> -->
 
   <h2> Select populated by slots</h2>
   <sgds-select
