feat(footer): update footer

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 </sgds-mainnav>
 <sgds-subnav>
   <h5 slot="header">STACKx Cybersecurity</h5>
-  <sgds-subnav-item active><a href="#">Overview</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">On-site Activites</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">Programme</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">Speakers</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">Partners</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#" target="_blank">Recordings</a></sgds-subnav-item>
-  <sgds-subnav-item><a href="#">FAQ</a></sgds-subnav-item>
+  <sgds-subnav-item active><sgds-link size="sm"><a href="#">Overview</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#">On-site Activites</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#">Programme</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#">Speakers</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#">Partners</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#" target="_blank">Recordings</a></sgds-link></sgds-subnav-item>
+  <sgds-subnav-item><sgds-link size="sm"><a href="#">FAQ</a></sgds-link></sgds-subnav-item>
   <sgds-button slot="actions" size="sm">Register now</sgds-button>
   <sgds-button slot="actions" size="sm">Exhibit</sgds-button>
   <sgds-button slot="actions" size="sm">Exhibit</sgds-button>
