--- a/playground/Select.html
+++ b/playground/Select.html
@@ -65,7 +65,7 @@
   ></sgds-select> -->
 
 </div>
-
+<!-- 
 <script>
   const select = document.querySelector("#select-example");
   const modalSelect = document.querySelector("#select-example-in-modal");
@@ -276,7 +276,7 @@
     { label: "Zambia", value: "204" },
     { label: "Zimbabwe", value: "205" }
   ];
-</script>
+</script> -->
 
 <script>
   window.addEventListener("sgds-change", () => console.log("sgds-change"));
